--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 #wrapper {
     width: 70%;
-    background-color: tomato;
+    /* background-color: darkgreen; */
 }
 
 a {
@@ -91,7 +91,6 @@ h4 {
     display: flex;
     justify-content: center;
     margin-top: 32px;
-
 }
 
 #footer ul li {
