Fix responsive; Add alt tags and target for links

--- a/css/style-articles.css
+++ b/css/style-articles.css
@@ -26,6 +26,8 @@
 
 /* Preuzeto sa https://www.sylvaindurand.org/overlay-image-in-pure-css/#_  
     Delovalo je zanimljivo, nisam znao kako ovo da napisem zapravo
+    Nisam sredio da i ova stvar bude responsive
+    Mozda ako stignem do subote
 */
 
 .overlay {
