--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,17 @@ h4 {
     margin: auto;
 }
 
+.code_syntax {
+    text-align: left;
+    width: 100%;
+    padding: 14px;
+    background-color: #f5f5f5;
+    display: inline-block;
+    color: #ff5f4d;
+    font-family: 'Roboto Mono', monospace;
+    border: 1px #858585 dotted;
+} 
+
 /* Article style */
 
 #article {
